next version update

--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^16.0.7",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.1.9",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
