--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
-    "next": "^15.1.9",
+    "next": "15.5.9",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.4.0"
